@@ -31,6 +31,7 @@
     <asciidoctor-comment-links.version>0.0.2</asciidoctor-comment-links.version>
     <asciidoclet.version>2.0.0</asciidoclet.version>
     <asciidoctor-maven-plugin.version>3.0.0</asciidoctor-maven-plugin.version>
+    <mavengem-wagon.version>2.0.2</mavengem-wagon.version>
     <gem-maven-plugin.version>3.0.3</gem-maven-plugin.version>
     <download-maven-plugin.version>1.9.0</download-maven-plugin.version>
     <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
@@ -101,22 +102,49 @@
         <version>${maven-javadoc-plugin.version}</version>
         <configuration>
           <source>${java.version}</source>
-          <doclet>org.asciidoctor.Asciidoclet</doclet>
+          <!-- https://github.com/asciidoctor/asciidoclet -->
+          <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
           <docletArtifact>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoclet</artifactId>
             <version>${asciidoclet.version}</version>
           </docletArtifact>
+          <additionalJOptions>
+             <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+             <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
+             <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+             <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
+            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+          </additionalJOptions>
           <!--<overview>src/main/java/overview.adoc</overview>-->
-          <additionalparam>
+          <additionalOptions>
             --base-dir ${project.basedir}
-            -r asciidoctor-diagram
+            <!--TODO: How to use asciidoctor-diagram?-->
+            --gem-path ${gem.path}
+            --require asciidoctor-diagram
             --attribute "stem=latexmath"
             --attribute "icons=font"
             --attribute "name=${project.name}"
             --attribute "version=${project.version}"
             --attribute "title-link=https://www.diguage.com/[${project.name} ${project.version}|地瓜哥]"
-          </additionalparam>
+          </additionalOptions>
+          <additionalDependencies>
+            <additionalDependency>
+              <groupId>org.jruby</groupId>
+              <artifactId>jruby</artifactId>
+              <version>${jruby.version}</version>
+            </additionalDependency>
+            <additionalDependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctorj</artifactId>
+              <version>${asciidoctorj.version}</version>
+            </additionalDependency>
+            <additionalDependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctorj-diagram</artifactId>
+              <version>${asciidoctorj-diagram.version}</version>
+            </additionalDependency>
+          </additionalDependencies>
         </configuration>
       </plugin>
       <plugin>
